--- a/src/css/output.css
+++ b/src/css/output.css
@@ -617,9 +617,6 @@
   .-top-4 {
     top: calc(var(--spacing) * -4);
   }
-  .top-1 {
-    top: calc(var(--spacing) * 1);
-  }
   .top-1\.5 {
     top: calc(var(--spacing) * 1.5);
   }
@@ -628,9 +625,6 @@
   }
   .top-3 {
     top: calc(var(--spacing) * 3);
-  }
-  .top-4 {
-    top: calc(var(--spacing) * 4);
   }
   .top-5 {
     top: calc(var(--spacing) * 5);
@@ -686,17 +680,11 @@
   .bottom-8 {
     bottom: calc(var(--spacing) * 8);
   }
-  .bottom-10 {
-    bottom: calc(var(--spacing) * 10);
-  }
   .bottom-16 {
     bottom: calc(var(--spacing) * 16);
   }
   .-left-3 {
     left: calc(var(--spacing) * -3);
-  }
-  .left-0 {
-    left: calc(var(--spacing) * 0);
   }
   .left-1 {
     left: calc(var(--spacing) * 1);
@@ -868,9 +856,6 @@
   }
   .mt-6 {
     margin-top: calc(var(--spacing) * 6);
-  }
-  .mt-8 {
-    margin-top: calc(var(--spacing) * 8);
   }
   .mt-12 {
     margin-top: calc(var(--spacing) * 12);
@@ -1049,12 +1034,6 @@
   .h-\[140vh\] {
     height: 140vh;
   }
-  .h-\[180vh\] {
-    height: 180vh;
-  }
-  .h-\[200vh\] {
-    height: 200vh;
-  }
   .h-\[680px\] {
     height: 680px;
   }
@@ -1076,14 +1055,11 @@
   .min-h-screen {
     min-height: 100vh;
   }
-  .w-1 {
-    width: calc(var(--spacing) * 1);
-  }
   .w-1\/2 {
     width: calc(1/2 * 100%);
   }
-  .w-3 {
-    width: calc(var(--spacing) * 3);
+  .w-2\/5 {
+    width: calc(2/5 * 100%);
   }
   .w-3\/4 {
     width: calc(3/4 * 100%);
@@ -1589,9 +1565,6 @@
   .gap-4 {
     gap: calc(var(--spacing) * 4);
   }
-  .gap-6 {
-    gap: calc(var(--spacing) * 6);
-  }
   .gap-7 {
     gap: calc(var(--spacing) * 7);
   }
@@ -1849,9 +1822,6 @@
     --tw-border-style: solid;
     border-style: solid;
   }
-  .border-slate-300 {
-    border-color: var(--color-slate-300);
-  }
   .border-slate-300\/20 {
     border-color: color-mix(in oklab, var(--color-slate-300) 20%, transparent);
   }
@@ -1894,9 +1864,6 @@
   .bg-\[var\(--my_variable\)\] {
     background-color: var(--my_variable);
   }
-  .bg-black {
-    background-color: var(--color-black);
-  }
   .bg-black\/70 {
     background-color: color-mix(in oklab, var(--color-black) 70%, transparent);
   }
@@ -1905,6 +1872,9 @@
   }
   .bg-green-700 {
     background-color: var(--color-green-700);
+  }
+  .bg-indigo-100 {
+    background-color: var(--color-indigo-100);
   }
   .bg-indigo-600 {
     background-color: var(--color-indigo-600);
@@ -2150,20 +2120,20 @@
   .pt-5 {
     padding-top: calc(var(--spacing) * 5);
   }
+  .pt-7 {
+    padding-top: calc(var(--spacing) * 7);
+  }
   .pt-12 {
     padding-top: calc(var(--spacing) * 12);
   }
   .pt-20 {
     padding-top: calc(var(--spacing) * 20);
   }
+  .pt-32 {
+    padding-top: calc(var(--spacing) * 32);
+  }
   .pt-36 {
     padding-top: calc(var(--spacing) * 36);
-  }
-  .pt-48 {
-    padding-top: calc(var(--spacing) * 48);
-  }
-  .pt-56 {
-    padding-top: calc(var(--spacing) * 56);
   }
   .pr-1 {
     padding-right: calc(var(--spacing) * 1);
@@ -2180,20 +2150,14 @@
   .pb-16 {
     padding-bottom: calc(var(--spacing) * 16);
   }
-  .pb-24 {
-    padding-bottom: calc(var(--spacing) * 24);
-  }
   .pb-32 {
     padding-bottom: calc(var(--spacing) * 32);
   }
+  .pb-64 {
+    padding-bottom: calc(var(--spacing) * 64);
+  }
   .pb-\[12rem\] {
     padding-bottom: 12rem;
-  }
-  .pb-\[15rem\] {
-    padding-bottom: 15rem;
-  }
-  .pb-\[30rem\] {
-    padding-bottom: 30rem;
   }
   .pl-2 {
     padding-left: calc(var(--spacing) * 2);
@@ -2252,17 +2216,9 @@
   .font-nexa {
     font-family: var(--font-nexa);
   }
-  .text-2xl {
-    font-size: var(--text-2xl);
-    line-height: var(--tw-leading, var(--text-2xl--line-height));
-  }
   .text-3xl {
     font-size: var(--text-3xl);
     line-height: var(--tw-leading, var(--text-3xl--line-height));
-  }
-  .text-4xl {
-    font-size: var(--text-4xl);
-    line-height: var(--tw-leading, var(--text-4xl--line-height));
   }
   .text-6xl {
     font-size: var(--text-6xl);
@@ -2288,29 +2244,14 @@
     font-size: var(--text-xl);
     line-height: var(--tw-leading, var(--text-xl--line-height));
   }
-  .text-\[15\.3px\] {
-    font-size: 15.3px;
-  }
-  .text-\[15\.4px\] {
-    font-size: 15.4px;
-  }
   .text-\[15\.5px\] {
     font-size: 15.5px;
   }
   .text-\[15px\] {
     font-size: 15px;
   }
-  .text-\[16\.5px\] {
-    font-size: 16.5px;
-  }
-  .text-\[16\.8px\] {
-    font-size: 16.8px;
-  }
   .text-\[16px\] {
     font-size: 16px;
-  }
-  .text-\[17px\] {
-    font-size: 17px;
   }
   .leading-none {
     --tw-leading: 1;
@@ -2327,10 +2268,6 @@
   .font-extrabold {
     --tw-font-weight: var(--font-weight-extrabold);
     font-weight: var(--font-weight-extrabold);
-  }
-  .font-extralight {
-    --tw-font-weight: var(--font-weight-extralight);
-    font-weight: var(--font-weight-extralight);
   }
   .font-light {
     --tw-font-weight: var(--font-weight-light);
@@ -2422,20 +2359,11 @@
   .text-\[\#ffbf00\] {
     color: #ffbf00;
   }
-  .text-\[15\.px\] {
-    color: 15.px;
-  }
-  .text-blue-100 {
-    color: var(--color-blue-100);
-  }
   .text-blue-100\/70 {
     color: color-mix(in oklab, var(--color-blue-100) 70%, transparent);
   }
   .text-blue-100\/80 {
     color: color-mix(in oklab, var(--color-blue-100) 80%, transparent);
-  }
-  .text-cyan-50 {
-    color: var(--color-cyan-50);
   }
   .text-cyan-50\/70 {
     color: color-mix(in oklab, var(--color-cyan-50) 70%, transparent);
@@ -2445,6 +2373,9 @@
   }
   .text-indigo-100\/90 {
     color: color-mix(in oklab, var(--color-indigo-100) 90%, transparent);
+  }
+  .text-indigo-400 {
+    color: var(--color-indigo-400);
   }
   .text-indigo-600 {
     color: var(--color-indigo-600);
@@ -2457,12 +2388,6 @@
   }
   .text-orange-100\/80 {
     color: color-mix(in oklab, var(--color-orange-100) 80%, transparent);
-  }
-  .text-orange-100\/90 {
-    color: color-mix(in oklab, var(--color-orange-100) 90%, transparent);
-  }
-  .text-red-100 {
-    color: var(--color-red-100);
   }
   .text-red-100\/90 {
     color: color-mix(in oklab, var(--color-red-100) 90%, transparent);
@@ -2491,20 +2416,11 @@
   .text-white {
     color: var(--color-white);
   }
-  .text-yellow-950 {
-    color: var(--color-yellow-950);
-  }
-  .text-yellow-950\/65 {
-    color: color-mix(in oklab, var(--color-yellow-950) 65%, transparent);
-  }
   .text-yellow-950\/70 {
     color: color-mix(in oklab, var(--color-yellow-950) 70%, transparent);
   }
   .text-zinc-100 {
     color: var(--color-zinc-100);
-  }
-  .text-zinc-400 {
-    color: var(--color-zinc-400);
   }
   .text-zinc-500 {
     color: var(--color-zinc-500);
@@ -3371,6 +3287,63 @@
       --tw-scale-y: 105%;
       --tw-scale-z: 105%;
       scale: var(--tw-scale-x) var(--tw-scale-y);
+    }
+  }
+}
+.input_email {
+  margin-bottom: calc(var(--spacing) * 3);
+  width: calc(3/4 * 100%);
+  border-radius: var(--radius-sm);
+  border-style: var(--tw-border-style);
+  border-width: 1px;
+  border-color: var(--color-slate-300);
+  background-color: var(--color-white);
+  padding: calc(var(--spacing) * 1.5);
+  --tw-font-weight: var(--font-weight-light);
+  font-weight: var(--font-weight-light);
+  color: var(--color-slate-600);
+  &::placeholder {
+    --tw-font-weight: var(--font-weight-light);
+    font-weight: var(--font-weight-light);
+  }
+  &::placeholder {
+    color: var(--color-zinc-400);
+  }
+  &:focus {
+    --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentColor);
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
+  &:focus {
+    --tw-ring-color: color-mix(in oklab, var(--color-blue-500) 70%, transparent);
+  }
+  &:focus {
+    outline-style: var(--tw-outline-style);
+    outline-width: 0px;
+  }
+}
+.button_email {
+  margin-bottom: calc(var(--spacing) * 3);
+  width: calc(1/2 * 100%);
+  border-radius: var(--radius-md);
+  background-color: var(--color-indigo-500);
+  padding: calc(var(--spacing) * 1.5);
+  --tw-font-weight: var(--font-weight-bold);
+  font-weight: var(--font-weight-bold);
+  color: var(--color-slate-100);
+  transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter;
+  transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+  transition-duration: var(--tw-duration, var(--default-transition-duration));
+  &:hover {
+    @media (hover: hover) {
+      --tw-scale-x: 105%;
+      --tw-scale-y: 105%;
+      --tw-scale-z: 105%;
+      scale: var(--tw-scale-x) var(--tw-scale-y);
+    }
+  }
+  &:hover {
+    @media (hover: hover) {
+      background-color: #ff6f00;
     }
   }
 }
